<resources>

    <string name="app_name">Wordwise</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About Wordwise</string>
    <string name="title_activity_main">Wordwise</string>
    <string name="title_configuration_step1">Configuration - Step 1</string>
    <string name="title_configuration_step2">Configuration - Step 2</string>
    <string name="ok">OK</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="done">Done</string>
    <string name="numberOfSelectedLanguages">%s language(s) selected</string>
    <string name="title_preferences_category_general">General</string>
    <string name="title_preferences_category_languages">Languages</string>
    <string name="title_preferences_dialog_name">Name</string>
    <string name="title_preferences_summary_name">Change your name</string>
    <string name="message_preferences_dialog_name">Provide your name</string>
    <string name="default_preferences_dialog_name">Enter your name</string>
    <string name="title_preferences_proficient_languages">Proficient Languages</string>
    <string name="summary_preferences_proficient_languages">Select which languages you can speak fluently</string>
    <string name="title_preferences_learning_language">Language to learn</string>
    <string name="summary_preferences_learning_language">Select which language you want to learn</string>
    <string name="descripion_image_main_menu">Wordwise image</string>
    <string name="how_to_play">How to Play</string>
    <string name="start_game">Start Game</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="wordQualityText">Quality</string>
    <string name="wordDifficultyText">Difficulty</string>
    <string name="word_evaluation_provide_difficulty_rating_dialog">Please provide your rating for difficulty of the word</string>
    <string name="about_button_label">About</string>
    <string name="exit_button_label">Exit</string>
    <string name="title_activity_about_activity">About</string>
    <string name="about_application_text">Wordwise 1.0 is developed as Android lab course project at TUM</string>
    <string name="check">Check</string>
    <string name="quit">Quit</string>
    <string name="continueLabel">Continue</string>
    <string name="word2Translations_game_information"><b>Match</b> English words with their translations</string>
    <string name="memory_game_information"><b>Remember</b> places of the word - translation pairs and match them </string>
    <string name="initial_conf_proficient_lang_info">Finally, which languages do you speak fluently?</string>
    <string name="initial_conf_learning_lang_info">Which language do you want to practice?</string>
    <string name="initial_conf_name_info">First, tell us your name</string>
    <string name="wrong_letters_title">Wrong Letters:</string>
    <string name="translate_word_activity_info"><b>Translate</b> an English word to the language asked below</string>
    <string name="translate_word_add_word">Enter a word in English</string>
    <string name="translate_word_add_translation">Enter the translation in </string>
    <string name="translate_word_submit_translation_button">Submit translation</string>
    <string name="selectDifficultyLevel">Select a difficulty level :</string>
    <string name="quitGameAlert">Are you sure you want to exit to main menu?</string>
    <string name="quitGameAlertTopic">Quit game</string>
    <string name="quitGamePositiveAnswer">Yes</string>
    <string name="quitGameNegativeAnswer">No</string>
    <string name="quitAppAlert">Are you sure you want to quit %s?</string>
    <string name="quitAppAlertTopic">Quit %s</string>
    <string name="translations">Translations</string>
    <string name="wordwise_translations_heading">@string/translations</string>
    <string name="wordEvaluation_game_information"><b>Evaluate</b> the following word in terms of its quality and difficulty</string>
    <string name="translate_word_submit_evaluation_button">Submit evaluation</string>
    <string name="rate_translation_screen_info"><b>Rate</b> the translation of the word below</string>
    <string name="submit_translation_rating">Submit Rating</string>
    <string name="translation_rating_bar_text">Rating</string>
    <string name="english">English</string>
    <string name="translation_title">The translation in</string>
    <string name="is_a_word">Is a word</string>
    <string name="is_not_a_word">Is not a word</string>
    <string name="i_dont_know">I don\'t know</string>
    <string name="loading_game">Loading game&#8230;</string>
    <string name="retry">Retry</string>
    <string name="retryIcon">Retry</string>
    <string name="welcomeLabel">Welcome to </string>
    <string name="getStarted">Get Started</string>
    <string name="configurationDefinition">Before you start playing Wordwise, you need to do just a three step configuration</string>
    <string name="title_configuration_initial_step">Initial step</string>
    <string name="configurationFinishButtonLabel">Let\'s Rock!</string>
    <string name="configurationFinishedText">Congratulations, you have successfully configured Wordwise! Are you ready to learn new languages?</string>
    <string name="title_configuration_final_step">Final step</string>
    <string name="review_game_label">Review</string>
    <string name="reviewInfoLabel"><b>Review</b> the words you have just practiced</string>
    <string name="levelLabel">Level</string>
    <string name="fail_translation_submit">Your translation could not be submitted. Check your internet connection and please try again later</string>
    <string name="success_translation_submit">Thank you for your translation</string>
    <string name="fail_feedback_submit">Your evaluation could not be submitted. Please check your internet connection and try again</string>
    <string name="fail_game_load">The game could not be loaded. Please check your internet connection</string>
    <string name="fail_insufficient_translations_on_server">The game could not be loaded. We don\'t have enough translations in the system yet</string>
    <string name="fail_insufficient_words_on_server">The game could not be loaded. We don\'t have enough words in the system yet</string>
    <string name="level_info_prefix1"><b>%s</b></string>
    <string name="level_info_prefix2"><b>/ %s</b></string>
    <string name="level_info_postfix">in level %s</string>
    <string name="name_input">Name</string>
    <string name="memory_same_flip_error">Flip something else!</string>
    <string name="letterbox_game_information"><b>Find</b> the words hidden in the grid </string>
    <string name="hangman_game_information"><b>Reveal</b> the word by guessing letters</string>
    <string name="hangman_win">Congratulations, you won!</string>
    <string name="hangman_lose">You lost!</string>
    <string name="wordwise_logo">Wordwise logo</string>
    <string name="try_next_game">Next game</string>
    <string name="tts_button">Text to speech button</string>
    <string name="tts_not_available">Text to speech is not available for %s</string>
    <string name="submit_in_progress">Submitting&#8230;</string>
    <string name="feedback_successful_text">Thank you for your feedback.</string>

</resources>