<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/submitTranslation"
        android:paddingBottom="@dimen/wordwise_padding_main" 
        android:layout_alignParentTop="true">

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/rating"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/wordEvaluationGameLabel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/wordEvaluation_game_information"
                android:textSize="@dimen/text_size_small" />

            <TextView
                android:id="@+id/wordToEvaluate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/wordwise_padding_main"
                android:text=""
                android:textSize="@dimen/text_size_xlarge" />

            <TextView
                android:id="@+id/wordQualityText"
                style="@style/wordwiseHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wordQualityText" />

            <RadioGroup
                android:id="@+id/qualityGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/is_a_word"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/is_a_word" />

                <RadioButton
                    android:id="@+id/is_not_word"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/is_not_a_word" />

                <RadioButton
                    android:id="@+id/i_dont_know"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/i_dont_know" />
            </RadioGroup>

            <TextView
                android:id="@+id/wordDifficultyText"
                style="@style/wordwiseHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wordDifficultyText" />

            <RatingBar
                android:id="@+id/wordDifficultyRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="3"
                android:paddingTop="@dimen/wordwise_padding_main"
                android:stepSize="1.0" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/submitTranslation"
        style="@style/wordwiseButtonStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:enabled="false"
        android:onClick="submitEvaluation"
        android:text="@string/translate_word_submit_evaluation_button" />

    <Button
        android:id="@+id/continueButton"
        style="@style/wordwiseButtonStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="continueNextGame"
        android:text="@string/continueLabel"
        android:visibility="invisible" />

</RelativeLayout>