<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/ratings"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/translateWordActivityInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/word2translations_padding_main"
            android:text="@string/translate_word_activity_info"
            android:textSize="@dimen/text_size_small" />

        <EditText
            android:id="@+id/wordToBeTranslated"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/translate_word_add_word"
            android:inputType="text"
            android:paddingTop="@dimen/word2translations_padding_main" />

        <EditText
            android:id="@+id/wordTranslation"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/translate_word_add_translation"
            android:inputType="text"
            android:paddingTop="@dimen/translateWord_Spacing" />
    </LinearLayout>

    <Button
        android:id="@+id/submitTranslation"
        style="@style/wordwiseButtonStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:enabled="true"
        android:gravity="center_vertical|center_horizontal"
        android:onClick="submitTranslation"
        android:text="@string/translate_word_submit_translation_button" />

    <Button
        android:id="@+id/continueButton"
        style="@style/wordwiseButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dip"
        android:enabled="false"
        android:gravity="center_vertical|center_horizontal"
        android:onClick="continueNextGame"
        android:text="@string/continueLabel" />

</RelativeLayout>