<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp" 
    android:gravity="center_vertical">

  
    <TextView
        android:id="@+id/word2TranslationGameLabel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/button_shape_padding_bottom"
        android:text="@string/selectDifficultyLevel"
        android:textSize="@dimen/text_size_medium" 
        android:gravity="center_horizontal"/>

    <Button
        android:id="@+id/easyNewGameButton"
        style="@style/wordwiseSmallLightButtonStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/button_shape_padding_bottom"
        android:onClick="startNewGame"
        android:text="@string/easy" />

    <Button
        android:id="@+id/mediumNewGameButton"
        style="@style/wordwiseSmallLightButtonStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/button_shape_padding_bottom"
        android:onClick="startNewGame"
        android:text="@string/medium" />

    <Button
        android:id="@+id/hardNewGameButton"
        style="@style/wordwiseSmallLightButtonStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/button_shape_padding_bottom"
        android:onClick="startNewGame"
        android:text="@string/hard" />

</LinearLayout>