<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/main_background"
    android:orientation="vertical"
    android:padding="@dimen/wordwise_padding_main" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/next"
        android:orientation="vertical"
        android:paddingBottom="@dimen/wordwise_padding_main" >

        <TextView
            android:id="@+id/word2TranslationGameLabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gray_info_background"
            android:paddingBottom="@dimen/wordwise_padding_main"
            android:text="@string/initial_conf_name_info"
            android:textSize="@dimen/text_size_large" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_input"
            android:inputType="text"
            android:paddingBottom="@dimen/wordwise_padding_main"
            android:text="@string/numberOfSelectedLanguages" />
    </LinearLayout>

    <Button
        android:id="@+id/next"
        style="@style/wordwiseButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:enabled="false"
        android:gravity="center_vertical|center_horizontal"
        android:onClick="next"
        android:text="@string/next" />

</RelativeLayout>