<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/rating"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/word2translations_padding_main"
        android:paddingTop="@dimen/word2translations_padding_main" >

        <TextView
            android:id="@+id/translationRatingGameLabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/rate_translation_screen_info"
            android:textSize="@dimen/text_size_small" />

        <TextView
            android:id="@+id/englishWordTitle"
            style="@style/wordwiseHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/english" />

        <TextView
            android:id="@+id/wordInEnglish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/word2translations_padding_main"
            android:text=""
            android:textSize="@dimen/text_size_xlarge" />

        <TextView
            android:id="@+id/translationTitle"
            style="@style/wordwiseHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/translation_title" />

        <TextView
            android:id="@+id/translationToRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/word2translations_padding_main"
            android:text=""
            android:textSize="@dimen/text_size_xlarge" />

        <TextView
            android:id="@+id/translationRatingText"
            style="@style/wordwiseHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/translation_rating_bar_text" />

        <RatingBar
            android:id="@+id/translationRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:paddingTop="@dimen/word2translations_padding_main"
            android:stepSize="1.0" />
    </LinearLayout>

    <Button
        android:id="@+id/submitRatingButton"
        style="@style/wordwiseButtonStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:enabled="false"
        android:onClick="submitRating"
        android:text="@string/submit_translation_rating" />

    <Button
        android:id="@+id/continueButton"
        style="@style/wordwiseButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dip"
        android:enabled="false"
        android:gravity="center_vertical|center_horizontal"
        android:onClick="continueNextGame"
        android:text="@string/continueLabel" />

</RelativeLayout>