<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="@dimen/wordwise_padding_main" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/buttons"
        android:orientation="vertical"
        android:paddingBottom="@dimen/wordwise_padding_main" >

        <TextView
            android:id="@+id/word2TranslationGameLabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/initial_conf_proficient_lang_info"
            android:textSize="@dimen/text_size_large" 
            android:paddingBottom="@dimen/wordwise_padding_main"/>

        <TextView
            android:id="@+id/numberOfSelectedLanguages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/numberOfSelectedLanguages"
            android:textColor="@color/wordwise_main_gray_start"
            android:paddingBottom="@dimen/wordwise_padding_main" />

        <ListView
            android:id="@+id/list"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/buttons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/back"
            style="@style/wordwiseBackButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/word2translations_word_margin_row"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:onClick="back"
            android:text="@string/back" />

        <Button
            android:id="@+id/finish"
            style="@style/wordwiseButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/word2translations_word_margin_row"
            android:layout_weight="1"
            android:enabled="false"
            android:gravity="center_vertical|center_horizontal"
            android:onClick="next"
            android:text="@string/finish" />
    </LinearLayout>

</RelativeLayout>