<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="@dimen/wordwise_padding_main" 
    android:background="@drawable/main_background">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/content"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/buttons"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/word2translations_padding_main"
            android:text="@string/initial_conf_learning_lang_info"
            android:textSize="@dimen/text_size_large" 
            android:background="@drawable/gray_info_background"/>

        <ListView
            android:id="@+id/list"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/buttons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/back"
            style="@style/wordwiseBackButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/word2translations_word_margin_row"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:onClick="back"
            android:text="@string/back" />

        <Button
            android:id="@+id/next"
            style="@style/wordwiseButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:gravity="center_vertical|center_horizontal"
            android:onClick="next"
            android:text="@string/next" />
    </LinearLayout>

</RelativeLayout>